fix cropps issue

--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -565,7 +565,7 @@ ol {
 .accordion-body{
   padding-bottom: 20px;
   ol{
-    padding-left: 6px;
+    padding-left: 7px;
   }
 }
 
